--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ngneat/transloco": "^4.2.2",
     "@popeyelab/ngx-validator": "^2.5.2",
     "bootstrap": "^5.3.0-alpha3",
     "eslint-config-standard-with-typescript": "^34.0.1",
